# Openspartan-graph

./: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  Features.md  Playlist_modes_translations.json  Playlist_modes_translations.txt  README.md  TODO.md  db_profiles.json  docker-compose.yml  openspartan_graph.py  openspartan_launcher.py  pyproject.toml  refresh_all_dbs.bat  requirements.txt  run_dashboard.bat  run_dashboard.py  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
data/wiki/: halo5_commendations_exclude.json  halo5_commendations_fr.json  halo5_commendations_missing.json
docs/: API_GRUNT_RESEARCH.md  PERFORMANCE_SCORE.md
scripts/: build_commendations_exclude_from_notes.py  compute_historical_performance.py  debug_highlight_gamertags.py  download_career_rank_icons.py  extract_h5g_commendations_fr.py  generate_commendations_mapping.py  generate_medals_fr.py  merge_databases.py  migrate_aliases_to_db.py  migrate_to_cache.py  prefetch_profile_assets.py  refetch_film_roster.py  spnkr_get_refresh_token.py  spnkr_import_db.py  sync.py  sync_medal_icons.py
src/: config.py  models.py
src/analysis/: __init__.py  filters.py  killer_victim.py  maps.py  performance_config.py  performance_score.py  stats.py
src/app/: __init__.py  data_loader.py  filters.py  filters_render.py  helpers.py  kpis.py  kpis_render.py  main_helpers.py  navigation.py  page_router.py  profile.py  routing.py  sidebar.py  state.py
src/db/: __init__.py  connection.py  loaders.py  loaders_cached.py  parsers.py  profiles.py  queries.py  schema.py
src/ui/: __init__.py  aliases.py  cache.py  career_ranks.py  commendations.py  formatting.py  medals.py  multiplayer.py  path_picker.py  perf.py  player_assets.py  profile_api.py  profile_api_cache.py  profile_api_tokens.py  profile_api_urls.py  settings.py  styles.py  sync.py  translations.py
src/ui/components/: __init__.py  checkbox_filter.py  performance.py
src/ui/pages/: __init__.py  citations.py  last_match.py  match_history.py  match_view.py  session_compare.py  settings.py  teammates.py  timeseries.py  win_loss.py
src/ui/sections/: __init__.py  openspartan.py  source.py
src/visualization/: __init__.py  distributions.py  maps.py  theme.py  timeseries.py  trio.py
static/: styles.css
static/medals/: medals_en.json  medals_fr.json
tests/: test_analysis.py  test_app_module.py  test_app_phase2.py  test_career_ranks_translation.py  test_gamertag_sanitize.py  test_match_player_gamertags.py  test_parsers.py  test_session_compare_hist_avg_category.py  test_spnkr_refactoring.py
